<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/question" 
        />

   	 	<RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/title">

        	<RadioButton
            android:id="@+id/male"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/male" />

        	<RadioButton
            android:id="@+id/female"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"  />

<!--        <RadioButton
            android:id="@+id/both"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/both"  />         -->

    	</RadioGroup>

    	<Button
        android:id="@+id/search"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup1"
        android:layout_centerInParent="true"
        android:text="@string/search" />

    	<TextView
    	    android:id="@+id/info"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_below="@+id/search"
    	    android:layout_centerHorizontal="true"
    	    android:layout_marginTop="60dp"/>

    	<ImageView
    	    android:id="@+id/photo"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_below="@+id/info"
    	    android:layout_centerHorizontal="true"
    	    android:layout_marginTop="60dp"/>
    	
    	<Button
        android:id="@+id/post"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_below="@+id/photo"
        android:layout_centerInParent="true"
        android:text="@string/post" 
        android:visibility="invisible"/>

</RelativeLayout >